--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "className":"BurnChartApp",
     "sdk":"2.0p",
     "javascript":[
+		"js/date.js",
 		"js/underscore.js",
 		"js/defectFieldPicker.js",
 		"js/burncalculator.js",
