--- a/config.json
+++ b/config.json
@@ -3,7 +3,9 @@
     "className":"BurnChartApp",
     "sdk":"2.0p",
     "javascript":[
-		"js/date.js",
+		"js/BoxSelect.js",
+        "js/AttributeMultiComboBox.js",
+        "js/date.js",
 		"js/underscore.js",
 		"js/defectFieldPicker.js",
 		"js/burncalculator.js",
@@ -11,6 +13,7 @@
         "js/App.js"
     ],
     "css":[
-        "css/app.css"
+        "css/app.css",
+        "css/BoxSelect.css"
     ]
 }
