changed name to On-Demand Custom Analytics

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "name":"BurnChartApp",
-    "className":"BurnChartApp",
+    "name":"On-Demand Custom Analytics",
+    "className":"OnDemandCustomAnalytics",
     "sdk":"2.0p",
     "javascript":[
 		"js/BoxSelect.js",
